diagnostics.txt
Parsed Rust Compiler Output:

--- Message 1 ---
Level: error
Message: field `type_` of struct `ToolInputSchema` is private
File: src-tauri\src\mcp\schemas.rs
Location: Line 45, Column 5
Label: in this type
Code Context:     ToolInputSchema {
Full Rendered Output:
error[E0451]: field `type_` of struct `ToolInputSchema` is private
  --> src-tauri\src\mcp\schemas.rs:46:9
   |
45 |     ToolInputSchema {
   |     --------------- in this type
46 |         type_: "object".to_string(),
   |         ^^^^^ private field




--- Message 2 ---
Level: failure-note
Message: For more information about this error, try `rustc --explain E0451`.
Full Rendered Output:
For more information about this error, try `rustc --explain E0451`.



